# death_note

./: .gitignore  ASYNC_UPGRADE_SUMMARY.md  Cargo.toml  DEVELOPMENT.md  LICENSE  NOTICES  README.md  blacklist_config.example.toml  blacklist_config.toml  build.rs  build_android.py  cloud_config.example.toml
.cargo/: config.toml
.github/: dependabot.yml
config/: build_android.toml
config/examples/: blacklist_config.example.toml  build_android.example.toml  cloud_blacklist.example.toml  cloud_config.example.toml
docs/: DEVELOPMENT.md
examples/: cloud_control_demo.rs  partition_restore_demo.rs  performance_test.rs
src/: blacklist.rs  blacklist_system.rs  cloud_control.rs  guidance.rs  guidance_async.rs  identification.rs  lib.rs  main.rs
src/blacklist/: coolapk.rs  manager.rs  mod.rs  qq.rs  telegram.rs  wechat.rs
src/cloud_control/: cache.rs  client.rs  embedded_config.rs  error.rs  manager.rs  mod.rs  types.rs
src/guidance/: guidance_async.rs  partition_ops.rs
src/identification/: coolapk_identifier.rs  lifespan_calculator.rs  manager.rs  mod.rs  qq_identifier.rs  telegram_identifier.rs  traits.rs  wechat_identifier.rs
test_data/coolapk/com.coolapk.market/shared_prefs/: CoolMarket.xml
test_data/qq/com.tencent.mobileqq/shared_prefs/: acc_info10001.xml  acc_info10002.xml  acc_info123456789.xml
test_data/telegram/org.telegram.messenger/shared_prefs/: ringtones_pref_0.xml  ringtones_pref_123456789.xml  ringtones_pref_987654321.xml
test_data/wechat/com.tencent.mm/shared_prefs/: com.tencent.mm_preferences.xml
tests/: blacklist_discovery_test.rs  cloud_control_test.rs  integration_test.rs  partition_ops_test.rs  wechat_identifier_test.rs
