[package]
name = "death_note"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2"
quick-xml = "0.36"
regex = "1.11"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
rand = "0.8"
# 云控系统依赖
reqwest = { version = "0.12", features = ["json"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

[build-dependencies]
toml = "0.9"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.7"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
